update nav position

--- a/about-us.html
+++ b/about-us.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Black stone portfolio</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/magnific-popup.css">
@@ -17,7 +17,7 @@
 
 <body>
     <!-- start navigationbar -->
-    <header class="fixed-top">
+    <header class="fixed-top items-transtion">
         <div class="container">
             <nav class="navbar navbar-expand-lg p-0 ">
                 <a class="navbar-brand mr-0" href="index.html">
@@ -62,7 +62,7 @@
         <div class="overlay"></div>
         <div class="hero-section__content text-center">
             <h1 class="mb-2 ">about us</h1>
-            <p>about company</p>
+            <p class="white-color">about company</p>
         </div>
     </section>
     <!-- end hero section  -->
@@ -161,25 +161,25 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-links pt-4">
-                        <h3 class="pb-3">useful links</h3>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item pl-0">
+                        <h3 class="pb-3 white-color">useful links</h3>
+                        <ul class="list-group list-group-flush white-color">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 home
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 about us
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 services
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 portofolio
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 client
                             </li>
@@ -189,7 +189,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-links pt-4">
-                        <h3 class="pb-3">contact us</h3>
+                        <h3 class="pb-3 white-color">contact us</h3>
                         <span class="company-location">usa</span>
                         <p class="address mb-0">
                             houston tx, usa
@@ -209,16 +209,16 @@
                             <span>Email:</span>info@example.com
                         </p>
                         <p class="social-media pt-3">
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-instagram"></i>
                             </a>
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-google-plus-g"></i>
                             </a>
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                         </p>
@@ -228,7 +228,7 @@
         </div>
     </footer>
     <!-- end footer -->
-    <a href="#" id="arrow">
+    <a href="#" class="items-transtion" id="arrow">
         <i class="fas fa-chevron-up"></i>
     </a>
 
