--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- start navigationbar -->
-    <header class="fixed-top">
+    <header class="fixed-top items-transtion">
             <div class="container">
                 <nav class="navbar navbar-expand-lg p-0 ">
                     <a class="navbar-brand mr-0" href="index.html">
@@ -85,8 +85,8 @@
                         <ul class="list-unstyled portfolio-items mb-5">
                             <li data-filter="all">all</li>
                             <!-- <li data-filter="*">architecture </li> -->
-                            <li data-filter=".interior-Design">interior Design </li>
                             <!-- <li data-filter="*">commercial Design </li> -->
+                            <li data-filter=".interior-Design">interior Design </li>
                             <li data-filter=".offices">offices </li>
                             <li data-filter=".hotels">hotels </li>
                             <li data-filter=".retail">retail </li>
@@ -240,25 +240,25 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-links pt-4">
-                        <h3 class="pb-3">useful links</h3>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item pl-0">
+                        <h3 class="pb-3 white-color">useful links</h3>
+                        <ul class="list-group list-group-flush white-color">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 home
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 about us
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 services
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 portofolio
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 client
                             </li>
@@ -268,7 +268,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-links pt-4">
-                        <h3 class="pb-3">contact us</h3>
+                        <h3 class="pb-3 white-color">contact us</h3>
                         <span class="company-location">usa</span>
                         <p class="address mb-0">
                             houston tx, usa
@@ -288,16 +288,16 @@
                             <span>Email:</span>info@example.com
                         </p>
                         <p class="social-media pt-3">
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-instagram"></i>
                             </a>
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-google-plus-g"></i>
                             </a>
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                         </p>
@@ -307,7 +307,7 @@
         </div>
     </footer>
     <!-- end footer -->
-    <a href="#" id="arrow">
+    <a href="#" class="items-transtion" id="arrow">
         <i class="fas fa-chevron-up"></i>
     </a>
 
