--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- start navigationbar -->
-    <header class="fixed-top">
+    <header class="fixed-top items-transtion">
         <div class="container">
             <nav class="navbar navbar-expand-lg p-0 ">
                 <a class="navbar-brand mr-0" href="index.html">
@@ -84,20 +84,20 @@
                     <!-- services -->
                     <nav>
                         <div class="nav nav-tabs flex-column" id="nav-tab" role="tablist">
-                            <a class="nav-item nav-link active" data-toggle="tab" href="#furniture-transport">internal
+                            <a class="nav-item nav-link items-transtion active" data-toggle="tab" href="#furniture-transport">internal
                                 furniture transport</a>
-                            <a class="nav-item nav-link" data-toggle="tab" href="#gympsum-ceiling">gympsum
+                            <a class="nav-item nav-link items-transtion" data-toggle="tab" href="#gympsum-ceiling">gympsum
                                 ceiling works</a>
-                            <a class="nav-item nav-link" data-toggle="tab" href="#doors-partitions">doors
+                            <a class="nav-item nav-link items-transtion" data-toggle="tab" href="#doors-partitions">doors
                                 & partitions</a>
-                            <a class="nav-item nav-link" data-toggle="tab" href="#alignment-adjustments">alignment
+                            <a class="nav-item nav-link items-transtion" data-toggle="tab" href="#alignment-adjustments">alignment
                                 & adjustments</a>
-                            <a class="nav-item nav-link" data-toggle="tab" href="#silicone-sealant">silicone
+                            <a class="nav-item nav-link items-transtion" data-toggle="tab" href="#silicone-sealant">silicone
                                 & sealant</a>
-                            <a class="nav-item nav-link" data-toggle="tab" href="#fixed-loose__furnitue">fixed
+                            <a class="nav-item nav-link items-transtion" data-toggle="tab" href="#fixed-loose__furnitue">fixed
                                 and loose furnitue</a>
-                            <a class="nav-item nav-link" data-toggle="tab" href="#electrical">electrical</a>
-                            <a class="nav-item nav-link" data-toggle="tab" href="#upholstery">upholstery</a>
+                            <a class="nav-item nav-link items-transtion" data-toggle="tab" href="#electrical">electrical</a>
+                            <a class="nav-item nav-link items-transtion" data-toggle="tab" href="#upholstery">upholstery</a>
                         </div>
                     </nav>
 
@@ -341,25 +341,25 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-links pt-4">
-                        <h3 class="pb-3">useful links</h3>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item pl-0">
+                        <h3 class="pb-3 white-color">useful links</h3>
+                        <ul class="list-group list-group-flush white-color">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 home
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 about us
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 services
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 portofolio
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 client
                             </li>
@@ -369,36 +369,36 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-links pt-4">
-                        <h3 class="pb-3">contact us</h3>
+                        <h3 class="pb-3 white-color">contact us</h3>
                         <span class="company-location">usa</span>
                         <p class="address mb-0">
-                                houston tx, usa
+                            houston tx, usa
                         </p>
                         <p class="mb-0">
                             <span>Phone:</span>+1 5589 55488 55
                         </p>
                         <span class="company-location">use</span>
-                            <p class="address mb-0">
-                                    united arab emrirates
-                            </p>
-                            <p class="mb-0">
-                                <span>Phone:</span>+1 5589 55488 55
-                            </p>
+                        <p class="address mb-0">
+                            united arab emrirates
+                        </p>
+                        <p class="mb-0">
+                            <span>Phone:</span>+1 5589 55488 55
+                        </p>
 
                         <p class="mb-0">
                             <span>Email:</span>info@example.com
                         </p>
                         <p class="social-media pt-3">
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-instagram"></i>
                             </a>
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-google-plus-g"></i>
                             </a>
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                         </p>
@@ -408,9 +408,10 @@
         </div>
     </footer>
     <!-- end footer -->
-    <a href="#" id="arrow">
+    <a href="#" class="items-transtion" id="arrow">
         <i class="fas fa-chevron-up"></i>
-     </a>
+    </a>
+    
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
