--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
 <body>
     <!-- start navigationbar -->
-    <header class="fixed-top">
+    <header class="items-transtion">
         <div class="container">
             <nav class="navbar navbar-expand-lg p-0 ">
                 <a class="navbar-brand mr-0" href="index.html">
-                    <img src="images/logo2.png" alt="" srcset="">
+                    <img src="images/logo2.png" alt="" >
                 </a>
                 <button class="navbar-toggler navbar-dark bg-dark" type="button" data-toggle="collapse" data-target="#header-navbar"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -87,8 +87,8 @@
         <h2 class="text-center pb-3 base-color"><span>our</span> process</h2>
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
-                    <div class="service-planning__content">
+                <div class="col-lg-3 col-md-6 mb-lg-0 mb-4">
+                    <div class="service-planning__content white-color">
                         <div class="step__service-planning d-flex flex-row pt-3">
                             <i class="fas fa-tasks base-color mr-2"></i>
                             <h4>learning the object</h4>
@@ -100,8 +100,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 ">
-                    <div class="service-planning__content">
+                <div class="col-lg-3 col-md-6 mb-lg-0 mb-4">
+                    <div class="service-planning__content white-color">
                         <div class="step__service-planning d-flex flex-row pt-3">
                             <i class="far fa-lightbulb base-color mr-2"></i>
                             <h4>understanding</h4>
@@ -112,8 +112,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 ">
-                    <div class="service-planning__content">
+                <div class="col-lg-3 col-md-6 ">
+                    <div class="service-planning__content white-color">
                         <div class="step__service-planning d-flex flex-row pt-3">
                             <i class="far fa-object-group base-color mr-2"></i>
                             <h4>scheduling</h4>
@@ -124,8 +124,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-md-3 ">
-                    <div class="service-planning__content">
+                <div class="col-lg-3 col-md-6 ">
+                    <div class="service-planning__content white-color">
                         <div class="step__service-planning d-flex flex-row pt-3">
                             <i class="fab fa-leanpub base-color mr-2"></i>
                             <h4>effictive studing</h4>
@@ -151,7 +151,7 @@
                             using our professional software we carry out preventive
                             and corrective maintenance for the following .
                         </p>
-                        <ul>
+                        <ul class="white-color">
                             <li>external and internal civil works</li>
                             <li>mep work</li>
                             <li>fixed and loops furniture</li>
@@ -176,9 +176,9 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="portfolio-items">
                         <a href="images/portfolio/pro-09.jpg" data-lightbox="image-1" data-title="eherwood oak gardens">
-                            <img src="images/portfolio/pro-09.jpg" class="img-fluid">
+                            <img src="images/portfolio/pro-09.jpg" alt="" >
                             <div class="overlay">
-                                <h5>eherwood oak gardens</h5>
+                                <h5 class="white-color text-center">eherwood oak gardens</h5>
                             </div>
                         </a>
                     </div>
@@ -186,7 +186,7 @@
                         <a href="images/portfolio/pro-15.jpg" data-lightbox="image-1" data-title="inverness">
                             <img src="images/portfolio/pro-15.jpg" alt="" >
                             <div class="overlay">
-                                <h5>inverness</h5>
+                                <h5 class="white-color text-center">inverness</h5>
                             </div>
                         </a>
                     </div>
@@ -196,7 +196,7 @@
                         <a href="images/portfolio/pro-11.jpg" data-lightbox="image-1" data-title="river crest">
                             <img src="images/portfolio/pro-11.jpg" alt="" class="img-fluid">
                             <div class="overlay">
-                                <h5>river crest</h5>
+                                <h5 class="white-color text-center">river crest</h5>
                             </div>
                         </a>
                     </div>
@@ -204,7 +204,7 @@
                         <a href="images/portfolio/pro-12.jpg" data-lightbox="image-1" data-title="river crest">
                             <img src="images/portfolio/pro-12.jpg" alt="" class="img-fluid">
                             <div class="overlay">
-                                <h5>river crest</h5>
+                                <h5 class="white-color text-center">river crest</h5>
                             </div>
                         </a>
                     </div>
@@ -214,7 +214,7 @@
                         <a href="images/portfolio/pro-13.jpg" data-lightbox="image-1" data-title="del monte">
                             <img src="images/portfolio/pro-13.jpg" alt="">
                             <div class="overlay">
-                                <h5>del monte</h5>
+                                <h5 class="white-color text-center">del monte</h5>
                             </div>
                         </a>
                     </div>
@@ -222,7 +222,7 @@
                         <a href="images/portfolio/pro-14.jpg" data-lightbox="image-1" data-title="del monte">
                             <img src="images/portfolio/pro-14.jpg" alt="">
                             <div class="overlay">
-                                <h5>del monte</h5>
+                                <h5 class="white-color text-center">del monte</h5>
                             </div>
                         </a>
                     </div>
@@ -232,7 +232,7 @@
                         <a href="images/portfolio/pro-10.jpg" data-lightbox="image-1" data-title="river crest">
                             <img src="images/portfolio/pro-10.jpg" alt="" class="img-fluid">
                             <div class="overlay">
-                                <h5>river crest</h5>
+                                <h5 class="white-color text-center">river crest</h5>
                             </div>
                         </a>
                     </div>
@@ -322,22 +322,22 @@
                 <div class="col-lg-4 ">
                     <div class="mangar-info mb-5 mb-lg-0">
                         <img src="images/mangars/manager1.PNG" alt="">
-                        <div class="mangar-name text-center">
+                        <div class="mangar-name items-transtion text-center">
                             <h5 class="mt-3">
-                                <a href="manager.html">nidal ghandour</a>
+                                <a href="manager.html" class="items-transtion white-color">nidal ghandour</a>
                             </h5>
                             <p>managing director</p>
                             <p class="social-media">
-                                <a href="#">
+                                <a href="#" class="items-transtion">
                                     <i class="fab fa-twitter"></i>
                                 </a>
-                                <a href="#">
+                                <a href="#" class="items-transtion">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
-                                <a href="#">
+                                <a href="#" class="items-transtion">
                                     <i class="fab fa-google-plus-g"></i>
                                 </a>
-                                <a href="#">
+                                <a href="#" class="items-transtion">
                                     <i class="fab fa-linkedin-in"></i>
                                 </a>
                             </p>
@@ -347,9 +347,9 @@
                 <div class="col-lg-4">
                     <div class="mangar-info mb-5 mb-lg-0">
                         <img src="images/mangars/manager2.PNG" alt="">
-                        <div class="mangar-name text-center">
+                        <div class="mangar-name items-transtion text-center">
                             <h5 class="mt-3">
-                                <a href="manager.html">nidal ayal</a>
+                                <a href="manager.html" class="items-transtion white-color">nidal ayal</a>
                             </h5>
                             <p>commerical director</p>
                             <p class="social-media">
@@ -372,9 +372,9 @@
                 <div class="col-lg-4">
                     <div class="mangar-info mb-5 mb-lg-0">
                         <img src="images/mangars/manager3.PNG" alt="">
-                        <div class="mangar-name text-center">
+                        <div class="mangar-name items-transtion text-center">
                             <h5 class="mt-3">
-                                <a href="manager.html">iftekhar sayed</a>
+                                <a href="manager.html" class="items-transtion white-color">iftekhar sayed</a>
 
                             </h5>
                             <p>projects director</p>
@@ -420,25 +420,25 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-links pt-4">
-                        <h3 class="pb-3">useful links</h3>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item pl-0">
+                        <h3 class="pb-3 white-color">useful links</h3>
+                        <ul class="list-group list-group-flush white-color">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 home
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 about us
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 services
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 portofolio
                             </li>
-                            <li class="list-group-item pl-0">
+                            <li class="list-group-item pl-0 items-transtion">
                                 <i class="fas fa-angle-right mr-1"></i>
                                 client
                             </li>
@@ -448,7 +448,7 @@
                 </div>
                 <div class="col-lg-4">
                     <div class="footer-links pt-4">
-                        <h3 class="pb-3">contact us</h3>
+                        <h3 class="pb-3 white-color">contact us</h3>
                         <span class="company-location">usa</span>
                         <p class="address mb-0">
                             houston tx, usa
@@ -468,16 +468,16 @@
                             <span>Email:</span>info@example.com
                         </p>
                         <p class="social-media pt-3">
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-instagram"></i>
                             </a>
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-google-plus-g"></i>
                             </a>
-                            <a href="#">
+                            <a href="#" class="white-color">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                         </p>
@@ -487,7 +487,7 @@
         </div>
     </footer>
     <!-- end footer -->
-    <a href="#" id="arrow">
+    <a href="#" class="items-transtion" id="arrow">
         <i class="fas fa-chevron-up"></i>
     </a>
 
