--- a/manager.html
+++ b/manager.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- start navigationbar -->
-    <header class="fixed-top">
+    <header class="fixed-top items-transtion">
             <div class="container">
                 <nav class="navbar navbar-expand-lg p-0 ">
                     <a class="navbar-brand mr-0" href="index.html">
@@ -126,91 +126,91 @@ The contracting and general maintenance business in the United States is always 
     <!--end team details -->
    <!-- start footer -->
    <footer id="footer-section" class="sections_padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="about-us__footer">
-                        <img src="images/logo.PNG" alt="logo">
-                        <p class="base-color">
-                            'black stone' is an awars-winning and dynamic project &
-                            cost management consultancy. providing a high
-                            quality. value for money, fully tailored service to clients
-                            across all sectors throughout the mena region and beyond.
-                        </p>
-                    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="about-us__footer">
+                    <img src="images/logo.PNG" alt="logo">
+                    <p class="base-color">
+                        'black stone' is an awars-winning and dynamic project &
+                        cost management consultancy. providing a high
+                        quality. value for money, fully tailored service to clients
+                        across all sectors throughout the mena region and beyond.
+                    </p>
                 </div>
-                <div class="col-lg-4">
-                    <div class="footer-links pt-4">
-                        <h3 class="pb-3">useful links</h3>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item pl-0">
-                                <i class="fas fa-angle-right mr-1"></i>
-                                home
-                            </li>
-                            <li class="list-group-item pl-0">
-                                <i class="fas fa-angle-right mr-1"></i>
-                                about us
-                            </li>
-                            <li class="list-group-item pl-0">
-                                <i class="fas fa-angle-right mr-1"></i>
-                                services
-                            </li>
-                            <li class="list-group-item pl-0">
-                                <i class="fas fa-angle-right mr-1"></i>
-                                portofolio
-                            </li>
-                            <li class="list-group-item pl-0">
-                                <i class="fas fa-angle-right mr-1"></i>
-                                client
-                            </li>
-                        </ul>
+            </div>
+            <div class="col-lg-4">
+                <div class="footer-links pt-4">
+                    <h3 class="pb-3 white-color">useful links</h3>
+                    <ul class="list-group list-group-flush white-color">
+                        <li class="list-group-item pl-0 items-transtion">
+                            <i class="fas fa-angle-right mr-1"></i>
+                            home
+                        </li>
+                        <li class="list-group-item pl-0 items-transtion">
+                            <i class="fas fa-angle-right mr-1"></i>
+                            about us
+                        </li>
+                        <li class="list-group-item pl-0 items-transtion">
+                            <i class="fas fa-angle-right mr-1"></i>
+                            services
+                        </li>
+                        <li class="list-group-item pl-0 items-transtion">
+                            <i class="fas fa-angle-right mr-1"></i>
+                            portofolio
+                        </li>
+                        <li class="list-group-item pl-0 items-transtion">
+                            <i class="fas fa-angle-right mr-1"></i>
+                            client
+                        </li>
+                    </ul>
 
-                    </div>
                 </div>
-                <div class="col-lg-4">
-                    <div class="footer-links pt-4">
-                        <h3 class="pb-3">contact us</h3>
-                        <span class="company-location">usa</span>
-                        <p class="address mb-0">
-                                houston tx, usa
-                        </p>
-                        <p class="mb-0">
-                            <span>Phone:</span>+1 5589 55488 55
-                        </p>
-                        <span class="company-location">use</span>
-                            <p class="address mb-0">
-                                    united arab emrirates
-                            </p>
-                            <p class="mb-0">
-                                <span>Phone:</span>+1 5589 55488 55
-                            </p>
+            </div>
+            <div class="col-lg-4">
+                <div class="footer-links pt-4">
+                    <h3 class="pb-3 white-color">contact us</h3>
+                    <span class="company-location">usa</span>
+                    <p class="address mb-0">
+                        houston tx, usa
+                    </p>
+                    <p class="mb-0">
+                        <span>Phone:</span>+1 5589 55488 55
+                    </p>
+                    <span class="company-location">use</span>
+                    <p class="address mb-0">
+                        united arab emrirates
+                    </p>
+                    <p class="mb-0">
+                        <span>Phone:</span>+1 5589 55488 55
+                    </p>
 
-                        <p class="mb-0">
-                            <span>Email:</span>info@example.com
-                        </p>
-                        <p class="social-media pt-3">
-                            <a href="#">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-google-plus-g"></i>
-                            </a>
-                            <a href="#">
-                                <i class="fab fa-linkedin-in"></i>
-                            </a>
-                        </p>
-                    </div>
+                    <p class="mb-0">
+                        <span>Email:</span>info@example.com
+                    </p>
+                    <p class="social-media pt-3">
+                        <a href="#" class="white-color">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="#" class="white-color">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="#" class="white-color">
+                            <i class="fab fa-google-plus-g"></i>
+                        </a>
+                        <a href="#" class="white-color">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>
+                    </p>
                 </div>
             </div>
         </div>
-    </footer>
-    <!-- end footer -->
-    <a href="#" id="arrow">
-            <i class="fas fa-chevron-up"></i>
-        </a>
+    </div>
+</footer>
+<!-- end footer -->
+<a href="#" class="items-transtion" id="arrow">
+    <i class="fas fa-chevron-up"></i>
+</a>
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
