adding about us section to home page

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                                 about us
                             </a>
                             <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">vision and mission </a>
-                                <a class="dropdown-item" href="#">portfolio </a>
+                                <a class="dropdown-item" href="about-us.html">vision and mission </a>
+                                <a class="dropdown-item" href="portfolio.html">portfolio </a>
                                 <Ul>
 
                                     <Li class="nav-item dropdown oo">
@@ -104,7 +104,6 @@
     </header>
     <!-- end navigationbar -->
     <!-- start hero section  -->
-
     <section id="hero-section" class="background-prop">
         <video playsinline autoplay muted loop poster="polina.jpg" id="bgvid">
             <source src="images/bg.mp4" type="video/mp4">
@@ -116,7 +115,36 @@
         </div>
     </section>
     <!-- end hero section  -->
-
+<!-- start about us section -->
+<section id="about-us__wrapper" class="sections_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="about-us__content ml-md-3">
+                    <h2 class=" base-color"><span>about</span> us</h2>
+                    <!-- <span>a few words about us</span> -->
+                    <p>
+                        "Black Stone" is an award-winning and dynamic project & cost management consultancy,
+                        providing a high quality, value for money, fully tailored service to Clients across all
+                        sectors throughout the MENA region, and beyond.
+                    </p>
+                    <p>
+                        Our knowledgeable and experienced team offers fully tailored solutions that lead our
+                        Clients' projects from initial concept right though to operational handover, with continued
+                        support.
+                    </p>
+                    <a href="about-us.html" class="read-more items-transtion d-block">read more <i class="fas fa-arrow-right"></i> </a>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="about-us__image">
+                    <img src="images/aboutUs/aboutUs.PNG">
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- end about us section -->
     <!-- strart our services planning -->
     <section id="service-planning" class="sections_padding">
         <div class="line-above__header"></div>
@@ -194,10 +222,6 @@
                             <li>fixed and loops furniture</li>
                             <li>joinery work</li>
                         </ul>
-                        <!-- <p>
-                            those service are provided to residential, commercial and office 
-                            bulding in an efficent and timely maner.
-                        </!-->
                     </div>
                 </div>
             </div>
