--- a/costManagement.html
+++ b/costManagement.html
@@ -104,7 +104,7 @@
     </header>
     <!-- end navigationbar -->
    <!-- start hero section  -->
-   <section id="hero-portfolio__section" class="background-prop">
+   <section id="cost-management__section" class="background-prop">
         <div class="overlay"></div>
         <!-- <div class="hero-section__content text-center"> -->
             <!-- <h1 class="mb-2 ">about us</h1> -->
