adding content of cost management page

--- a/costManagement.html
+++ b/costManagement.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/lightbox.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/management.css">
 </head>
 
 <body>
@@ -104,14 +105,17 @@
     </header>
     <!-- end navigationbar -->
    <!-- start hero section  -->
-   <section id="cost-management__section" class="background-prop">
+   <section id="cost-management__hero-section" class="background-prop">
         <div class="overlay"></div>
-        <!-- <div class="hero-section__content text-center"> -->
-            <!-- <h1 class="mb-2 ">about us</h1> -->
-            <!-- <p>about company</p> -->
-        <!-- </div> -->
+        <div class="hero-section__content text-center">
+            <h1 class="mb-2 ">consaltancy</h1> 
+            <p class="white-color">cost management</p>
+         </div>
     </section>
     <!-- end hero section  -->
+    <!-- start cost management section -->
+
+    <!-- end cost management section -->
     <!-- start footer -->
     <footer id="footer-section" class="sections_padding">
         <div class="container">
