adding items of cost management

--- a/costManagement.html
+++ b/costManagement.html
@@ -104,18 +104,126 @@
         </div>
     </header>
     <!-- end navigationbar -->
-   <!-- start hero section  -->
-   <section id="cost-management__hero-section" class="background-prop">
+    <!-- start hero section  -->
+    <section id="cost-management__hero-section" class="background-prop">
         <div class="overlay"></div>
         <div class="hero-section__content text-center">
-            <h1 class="mb-2 ">consaltancy</h1> 
+            <h1 class="mb-2 ">consaltancy</h1>
             <p class="white-color">cost management</p>
-         </div>
+        </div>
     </section>
     <!-- end hero section  -->
     <!-- start cost management section -->
+    <section id="cost-management__content" class="sections_padding">
+        <div class="line-above__header"></div>
+        <h2 class="text-center pb-3 base-color"><span>cost</span> management</h2>
+        <!-- <p > </p> -->
+        <div class="container">
+            <div class="row">
+                <!-- start cost planning -->
+                <div class="col-lg-4 col-md-6">
+                    <div class="card border-0 bg-none">
+                        <div class="card-body text-center">
+                            <div class="content-icon">
+                                    <i class="fas fa-border-all"></i>
+                            </div>
+                            <h3 class="card-title">cost planning</h3>
+                            <p class="card-text">
+                                    We provide construction cost estimates at all design stages from first concept right through to 
+                                    final detailed design to help inform Clients on the project financial viability and budgeting, 
+                                    market rates and cost impacts of design and specification options .
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- start change order -->
+                <div class="col-lg-4 col-md-6">
+                    <div class="card border-0 bg-none">
+                        <div class="card-body text-center">
+                            <div class="content-icon">
+                                    <i class="fas fa-sync"></i>
+                            </div>
+                            <h3 class="card-title">change order</h3>
+                            <p class="card-text">
+                                    We review validity, assist in negotiating and formally administer contract changes on behalf of clients 
+                                    to ensure all changes are fair, reasonable and properly documented .
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- cost / bid analysis -->
+                <div class="col-lg-4 col-md-6">
+                    <div class="card border-0 bg-none">
+                        <div class="card-body text-center">
+                            <div class="content-icon">
+                                    <i class="fas fa-dollar-sign"></i>
+                            </div>
+                            <h3 class="card-title">cost / bid analysis</h3>
+                            <p class="card-text">
+                                    We complete comprehensive bid comparisons between suppliers and contractors 
+                                    and recommend to the Client thebest value for money option, 
+                                    within budget, program and specification for the Client to proceed with .
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- bill of quantities -->
+                <div class="col-lg-4 col-md-6">
+                    <div class="card border-0 bg-none">
+                        <div class="card-body text-center">
+                            <div class="content-icon">
+                                    <i class="fas fa-money-bill-wave"></i>
+                            </div>
+                            <h3 class="card-title">bill of quantities</h3>
+                            <p class="card-text">
+                                    We provide detailed Bills of Quantities of the approved design that can then
+                                     be used by tendering contractors and suppliers to price against,
+                                     whilst ensuring that submitted tenders are accurate, reliable and comparable .
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- start lead time analysis -->
+                <div class="col-lg-4 col-md-6">
+                    <div class="card border-0 bg-none">
+                        <div class="card-body text-center">
+                            <div class="content-icon">
+                                <i class="fas fa-hourglass-start"></i>
+                            </div>
+                            <h3 class="card-title">lead time analysis</h3>
+                            <p class="card-text">
+                                    We review the project design to highlight items that may cause 
+                                    delay to the project schedule. These items of concern
+                                     can be substituted for alternate designs or suppliers that can meet schedule, whilst .
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <!-- start tender documentation -->
+                <div class="col-lg-4 col-md-6">
+                    <div class="card border-0 bg-none">
+                        <div class="card-body text-center">
+                            <div class="content-icon">
+                                    <i class="far fa-file-alt"></i>
+                            </div>
+                            <h3 class="card-title">tender documentation</h3>
+                            <p class="card-text">
+                                    We compile tender documentation, including the draft conditions of contract, 
+                                    design drawings, specifications and schedules, the Bill of Quantities, 
+                                    conditions of tender and the request for tender letter
+                                     to then be issued formally to the pre-qualified tender field .
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+    </section>
     <!-- end cost management section -->
+    <div class="wrapper sections_padding">
+        <p class="white-color mb-0">let's start a project together</p>
+    </div>
     <!-- start footer -->
     <footer id="footer-section" class="sections_padding">
         <div class="container">
