update items of cost management

--- a/costManagement.html
+++ b/costManagement.html
@@ -123,15 +123,17 @@
                 <!-- start cost planning -->
                 <div class="col-lg-4 col-md-6">
                     <div class="card border-0 bg-none">
-                        <div class="card-body text-center">
-                            <div class="content-icon">
-                                    <i class="fas fa-border-all"></i>
+                        <div class="card-body">
+                            <div class="content-icon d-flex flex-row mb-3 mb-3">
+                                <i class="fas fa-border-all mr-3"></i>
+                                <h3 class="card-title ">cost planning</h3>
                             </div>
-                            <h3 class="card-title">cost planning</h3>
                             <p class="card-text">
-                                    We provide construction cost estimates at all design stages from first concept right through to 
-                                    final detailed design to help inform Clients on the project financial viability and budgeting, 
-                                    market rates and cost impacts of design and specification options .
+                                We provide construction cost estimates at all design stages from first concept right
+                                through to
+                                final detailed design to help inform Clients on the project financial viability and
+                                budgeting,
+                                market rates and cost impacts of design and specification options .
                             </p>
                         </div>
                     </div>
@@ -139,14 +141,15 @@
                 <!-- start change order -->
                 <div class="col-lg-4 col-md-6">
                     <div class="card border-0 bg-none">
-                        <div class="card-body text-center">
-                            <div class="content-icon">
-                                    <i class="fas fa-sync"></i>
+                        <div class="card-body">
+                            <div class="content-icon d-flex flex-row mb-3 ">
+                                <i class="fas fa-sync mr-3"></i>
+                                <h3 class="card-title">change order</h3>
                             </div>
-                            <h3 class="card-title">change order</h3>
                             <p class="card-text">
-                                    We review validity, assist in negotiating and formally administer contract changes on behalf of clients 
-                                    to ensure all changes are fair, reasonable and properly documented .
+                                We review validity, assist in negotiating and formally administer contract changes on
+                                behalf of clients
+                                to ensure all changes are fair, reasonable and properly documented .
                             </p>
                         </div>
                     </div>
@@ -154,15 +157,15 @@
                 <!-- cost / bid analysis -->
                 <div class="col-lg-4 col-md-6">
                     <div class="card border-0 bg-none">
-                        <div class="card-body text-center">
-                            <div class="content-icon">
-                                    <i class="fas fa-dollar-sign"></i>
+                        <div class="card-body ">
+                            <div class="content-icon d-flex flex-row mb-3">
+                                <i class="fas fa-dollar-sign mr-3"></i>
+                                <h3 class="card-title">cost / bid analysis</h3>
                             </div>
-                            <h3 class="card-title">cost / bid analysis</h3>
                             <p class="card-text">
-                                    We complete comprehensive bid comparisons between suppliers and contractors 
-                                    and recommend to the Client thebest value for money option, 
-                                    within budget, program and specification for the Client to proceed with .
+                                We complete comprehensive bid comparisons between suppliers and contractors
+                                and recommend to the Client thebest value for money option,
+                                within budget, program and specification for the Client to proceed with .
                             </p>
                         </div>
                     </div>
@@ -170,15 +173,15 @@
                 <!-- bill of quantities -->
                 <div class="col-lg-4 col-md-6">
                     <div class="card border-0 bg-none">
-                        <div class="card-body text-center">
-                            <div class="content-icon">
-                                    <i class="fas fa-money-bill-wave"></i>
+                        <div class="card-body">
+                            <div class="content-icon d-flex flex-row mb-3">
+                                <i class="fas fa-money-bill-wave mr-3"></i>
+                                <h3 class="card-title">bill of quantities</h3>
                             </div>
-                            <h3 class="card-title">bill of quantities</h3>
                             <p class="card-text">
-                                    We provide detailed Bills of Quantities of the approved design that can then
-                                     be used by tendering contractors and suppliers to price against,
-                                     whilst ensuring that submitted tenders are accurate, reliable and comparable .
+                                We provide detailed Bills of Quantities of the approved design that can then
+                                be used by tendering contractors and suppliers to price against,
+                                whilst ensuring that submitted tenders are accurate, reliable and comparable .
                             </p>
                         </div>
                     </div>
@@ -186,15 +189,15 @@
                 <!-- start lead time analysis -->
                 <div class="col-lg-4 col-md-6">
                     <div class="card border-0 bg-none">
-                        <div class="card-body text-center">
-                            <div class="content-icon">
-                                <i class="fas fa-hourglass-start"></i>
+                        <div class="card-body">
+                            <div class="content-icon d-flex flex-row mb-3">
+                                <i class="fas fa-hourglass-start mr-3"></i>
+                                <h3 class="card-title">lead time analysis</h3>
                             </div>
-                            <h3 class="card-title">lead time analysis</h3>
                             <p class="card-text">
-                                    We review the project design to highlight items that may cause 
-                                    delay to the project schedule. These items of concern
-                                     can be substituted for alternate designs or suppliers that can meet schedule, whilst .
+                                We review the project design to highlight items that may cause
+                                delay to the project schedule. These items of concern
+                                can be substituted for alternate designs or suppliers that can meet schedule, whilst .
                             </p>
                         </div>
                     </div>
@@ -202,16 +205,16 @@
                 <!-- start tender documentation -->
                 <div class="col-lg-4 col-md-6">
                     <div class="card border-0 bg-none">
-                        <div class="card-body text-center">
-                            <div class="content-icon">
-                                    <i class="far fa-file-alt"></i>
+                        <div class="card-body ">
+                            <div class="content-icon d-flex flex-row mb-3">
+                                <i class="far fa-file-alt mr-3"></i>
+                                <h3 class="card-title ">tender documentation</h3>
                             </div>
-                            <h3 class="card-title">tender documentation</h3>
                             <p class="card-text">
-                                    We compile tender documentation, including the draft conditions of contract, 
-                                    design drawings, specifications and schedules, the Bill of Quantities, 
-                                    conditions of tender and the request for tender letter
-                                     to then be issued formally to the pre-qualified tender field .
+                                We compile tender documentation, including the draft conditions of contract,
+                                design drawings, specifications and schedules, the Bill of Quantities,
+                                conditions of tender and the request for tender letter
+                                to then be issued formally to the pre-qualified tender field .
                             </p>
                         </div>
                     </div>
