--- a/costManagement.html
+++ b/costManagement.html
@@ -224,7 +224,7 @@
         </div>
     </section>
     <!-- end cost management section -->
-    <div class="wrapper sections_padding">
+    <div class="wrapper pt-5 pb-5">
         <p class="white-color mb-0">let's start a project together</p>
     </div>
     <!-- start footer -->
