--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             </a>
                             <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="#">Project Management </a>
-                                <a class="dropdown-item" href="#">cost Management </a>
+                                <a class="dropdown-item" href="costManagement.html">cost Management </a>
                             </div>
                         </li>
                         <li class="nav-item">
