create project management section

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                                 consultancy
                             </a>
                             <div class="items-transtion dropitem" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Project Management </a>
-                                <a class="dropdown-item" href="costManagement.html">cost Management </a>
+                                <a class="dropdown-item" href="projectManagement.html">Project Management </a>
+                                <a class="dropdown-item" href="costManagement.html#cost-management__content">cost Management </a>
                             </div>
                         </li>
                         <li class="nav-item">
