--- a/costManagement.html
+++ b/costManagement.html
@@ -8,10 +8,7 @@
     <title>Black stone cost management</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/lightbox.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/management.css">
 </head>
@@ -113,11 +110,13 @@
         </div>
     </section>
     <!-- end hero section  -->
+    <!-- start project management section -->
+    
+    <!-- end project management section -->
     <!-- start cost management section -->
     <section id="cost-management__content" class="sections_padding">
         <div class="line-above__header"></div>
         <h2 class="text-center pb-3 base-color"><span>cost</span> management</h2>
-        <!-- <p > </p> -->
         <div class="container">
             <div class="row">
                 <!-- start cost planning -->
@@ -318,10 +317,7 @@
     <script src="js/jquery-3.5.1.min.js"></script>
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.js"></script>
     <script src="js/all.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/lightbox.js"></script>
     <script src="js/script.js"></script>
 </body>
 
