--- a/costManagement.html
+++ b/costManagement.html
@@ -111,7 +111,33 @@
     </section>
     <!-- end hero section  -->
     <!-- start project management section -->
-    
+    <section id="project-management__section" class="sections_padding">
+        <div class="line-above__header"></div>
+        <h2 class="text-center pb-3 base-color"><span>project</span> management</h2>
+        <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="project-management__content">
+                            <h2>project management</h2>
+                            <p>
+                                    Our knowledgeable and experienced team offers fully tailored solutions that lead our Clients' projects from initial concept right though to operational handover, with continued support. 
+                                    
+                                </p>
+                                <p>
+                                        We act on behalf of our Clients to lead teams of consultants, stakeholders, contractors and suppliers to intelligently implement the project brief whilst overcoming risks and constraints present in every construction project. 
+
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="project-management__img">
+                            <img src="images/management/about.jpg" alt="project management" >
+                        </div>
+                    </div>
+                </div>    
+        </div>
+
+    </section>
     <!-- end project management section -->
     <!-- start cost management section -->
     <section id="cost-management__content" class="sections_padding">
